<resources>
    <string name="app_name">PhobiaQuiz_App</string>
    <string name="neutral">Neutral</string>
    <string name="postive">Postive</string>
    <string name="negative">Negative</string>
    <string name="images">images</string>

    <string name="nameerror">Enter a valid input</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="login">Login</string>
    <string name="user_name">User name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="retype_password">Retype password:</string>
    <string name="sign_up">Sign Up</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string name="change_password">Change Password</string>
    <string name="change_profile">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="phobia">Phobia:</string>
    <string name="name">Name:</string>

</resources>