<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/changePassword"  app:showAsAction="never" android:title="@string/change_password">
    </item>

    <item
        android:id="@+id/changeProfile"  app:showAsAction="never" android:title="@string/change_profile">
    </item>

    <item
        android:id="@+id/help"  app:showAsAction="never" android:title="@string/help">
    </item>

    <item
        android:id="@+id/about"  app:showAsAction="never" android:title="@string/about">
    </item>

    <item
        android:id="@+id/logout"  app:showAsAction="never" android:title="@string/logout">
    </item>

    <item
        android:id="@+id/exit"  app:showAsAction="never" android:title="@string/exit">
    </item>


</menu>
