<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlbumControlFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/neutralLabel"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:background="#7ABFB4B4"
            android:gravity="center_horizontal"
            android:text="@string/neutral"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/negativeLabel"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:background="#8DBF1B0F"
            android:gravity="center_horizontal"
            android:text="@string/negative"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084" />

        <ImageButton
            android:id="@+id/imageButtonLeft"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="#00FFFFFF"
            android:scaleType="centerInside"
            android:src="@drawable/leftarrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.904" />

        <ImageButton
            android:id="@+id/imageButtonRight"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/rightarrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.904" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="379dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/postiveLabel"
            android:layout_width="125dp"

            android:layout_height="45dp"
            android:background="#8521EF2A"
            android:gravity="center_horizontal"
            android:text="@string/postive"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/seekBar"
            app:layout_constraintHorizontal_bias="0.992"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>